--- a/views/a.ejs
+++ b/views/a.ejs
@@ -14,7 +14,7 @@
       <li>
         <div class="item-data">
           <span class="id-column"><%= item.id %></span>
-          <span class="name-column"><%= item.name %></span>
+          <span class="name-column"><%= item.date %></span>
         </div>
       </li>
     <% }) %>
