--- a/views/conclude.ejs
+++ b/views/conclude.ejs
@@ -32,7 +32,7 @@
                     else { ret = num; }
                     return ret;
                   }
-                var now = new Date(); 
+                var now = new Date(Date.now() + ((new Date().getTimezoneOffset() + (9 * 60)) * 60 * 1000)); 
                 var day = set2(now.getDate());
                 var hour = set2(now.getHours());
                 var min = set2(now.getMinutes());
